--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <div id="flutter" style="position: relative"></div>
   <div id="openseadragon1" style="width: 1200px; height: 1200px;"></div>
 
-  <script src="openseadragon.min.js"></script>
+  <script src="./openseadragon/build/web/openseadragon.min.js"></script>
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
@@ -44,6 +44,15 @@
         tileSources: "test.dzi"
     });
   </script>
+
+  <!-- <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function () {
+            navigator.serviceWorker.register('/flutter_service_worker.js');
+        });
+    }
+  </script>
+  <script src="main.dart.js" type="application/javascript"></script> -->
 
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
