--- a/web/index.html
+++ b/web/index.html
@@ -36,12 +36,12 @@
   <div id="flutter" style="position: relative"></div>
   <div id="openseadragon1" style="width: 1200px; height: 1200px;"></div>
 
-  <script src="https://www.toptal.com/developers/hastebin/raw/ziqefovawu"></script>
+  <script src="build/web/openseadragon.min.js"></script>
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "test_files/",
-        tileSources: "test.dzi"
+        prefixUrl: "build/web/test_files/",
+        tileSources: "build/web/test.dzi"
     });
   </script>
 
