--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/openseadragon/"/>
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -40,7 +40,7 @@
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "build/web/assets/test_files/",
+        prefixUrl: "build/web/assets/assets/test_files/",
         tileSources: "build/web/assets/test.dzi"
     });
   </script>
