--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
     var viewer = OpenSeadragon({
         id: "openseadragon1",
         prefixUrl: "build/web/assets/assets/test_files/",
-        tileSources: "build/web/assets/test.dzi"
+        tileSources: "build/web/assets/assets/test.dzi"
     });
   </script>
 
