--- a/web/index.html
+++ b/web/index.html
@@ -40,8 +40,8 @@
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "build/web/assets/assets/test_files/",
-        tileSources: "build/web/assets/assets/test.dzi"
+        prefixUrl: "/test_files/",
+        tileSources: "/test.dzi"
     });
   </script>
 
