--- a/web/index.html
+++ b/web/index.html
@@ -42,8 +42,8 @@
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "/test_files/",
-        tileSources: "/test.dzi"
+        prefixUrl: "test_files/",
+        tileSources: "test.dzi"
     });
   </script>
 
