--- a/web/index.html
+++ b/web/index.html
@@ -36,14 +36,12 @@
   <div id="flutter" style="position: relative"></div>
   <div id="openseadragon1" style="width: 1200px; height: 1200px;"></div>
 
-  <link href="test.dzi">
-  <link href="test_files/">
   <script src="https://www.toptal.com/developers/hastebin/raw/ziqefovawu"></script>
   <script>
     var viewer = OpenSeadragon({
         id: "openseadragon1",
-        prefixUrl: "test_files/",
-        tileSources: "test.dzi"
+        prefixUrl: "/test_files/",
+        tileSources: "/test.dzi"
     });
   </script>
 
