--- a/web/index.html
+++ b/web/index.html
@@ -31,10 +31,25 @@
 
   <title>openseadragon</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    #app-container {
+      height: 800px;
+      width: 600px;
+      background-color: grey;
+      margin: 0 auto;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <div id="flutter" style="position: relative"></div>
-  <div id="openseadragon1" style="width: 1200px; height: 1200px;"></div>
+  <div id="openseadragon1" style="width: 800px; height: 800px;"></div>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function() {
+        navigator.serviceWorker.register("flutter_service_worker.js");
+      });
+    }
+  </script>
 
   <script src="https://www.toptal.com/developers/hastebin/raw/ziqefovawu"></script>
   <script>
@@ -45,18 +60,13 @@
     });
   </script>
 
-  <!-- <script>
+  <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
             navigator.serviceWorker.register('/flutter_service_worker.js');
         });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script> -->
-
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
   <!-- <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
@@ -121,5 +131,13 @@
       loadMainDartJs();
     }
   </script> -->
+
+  <flutter-app width="600px" height="800px"></flutter-app>
+  <script src="flutter-app.js"></script>
+
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
+
 </body>
 </html>
