--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
         prefixUrl: "/openseadragon/test_files/",
         tileSources: "/openseadragon/test.dzi"
     });
-    }, 10000);
+    }, 4000);
   </script>
 
   <script>
@@ -59,7 +59,7 @@
 
       var divTag = document.createElement('div');
       divTag.id = 'openseadragon1';
-      divTag.style = 'width: 800px; height: 800px; background:red; position:relative; z-index:1000';
+      divTag.style = 'width: 800px; height: 800px; position:relative; z-index:1000';
       document.body.append(divTag);
     }
 
