/openseadragon/openseadragon.min.js

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="https://www.toptal.com/developers/hastebin/ikoxumocew.js"></script>
+  <script src="/openseadragon/openseadragon.min.js"></script>
   <script>
     setTimeout(() => {
       var viewer = OpenSeadragon({
